--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "displayName": "todo-reminder",
   "description": "Don't comment and push your todos. Our bots will remind you about your todos",
   "author": {
-    "name" : "Laser Ayyıldız",
-    "email" : "laserayyildiz@gmail.com"
+    "name": "Laser Ayyıldız",
+    "email": "laserayyildiz@gmail.com"
   },
   "version": "0.0.1",
   "engines": {
@@ -18,29 +18,29 @@
   ],
   "main": "./dist/extension.js",
   "contributes": {
-		"commands": [
-			{
-				"command": "todo-reminder.remindMe",
-				"title": "Reminde Me",
-				"enablement": "!commentIsEmpty"
-			}
-		],
-		"menus": {
-			"commandPalette": [
-				{
-					"command": "todo-reminder.remindMe",
-					"when": "false"
-				}
-			],
-			"comments/commentThread/context": [
-				{
-					"command": "todo-reminder.remindMe",
-					"group": "inline",
-					"when": "commentController == todo-reminder && commentThreadIsEmpty"
-				}
-			]
-		}
-	},
+    "commands": [
+      {
+        "command": "todo-reminder.remindMe",
+        "title": "Reminde Me",
+        "enablement": "!commentIsEmpty"
+      }
+    ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "todo-reminder.remindMe",
+          "when": "false"
+        }
+      ],
+      "comments/commentThread/context": [
+        {
+          "command": "todo-reminder.remindMe",
+          "group": "inline",
+          "when": "commentController == todo-reminder && commentThreadIsEmpty"
+        }
+      ]
+    }
+  },
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
@@ -53,19 +53,22 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.71.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.71.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.20.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.4",
     "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "@vscode/test-electron": "^2.1.5"
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
